# toolbox

./: components.d.ts  package.json  rsbuild.config.ts
.github/workflows/: arm.yml  rust.yml
core/serialport/: Cargo.toml
core/serialport/src/: lib.rs  sp.rs  sp_list.rs
src/: App.vue  index.css  index.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  main.rs  manage.rs
src/store/: base_control.ts
src/views/: main_body.vue  tabs.vue  top_bar.vue
