[package]
name = "multi_tools_serialport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serialport = "4.3.0"
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread", "macros", "time"] }
